CMF 2.0.0-alpha (2006/01/22)

  New Features

    - CMFCore.FSPythonScript:  Customized versions now track the "original"
      source from which they were customized, and can present a diff between
      that version and their current source text.

    - CMFDefault and CMFCalendar: Added locales directories with .pot files.
      A modified i18nextract.py script from Zope 3 is used to extract
      translatable strings from .py, .pt, .html and .xml files.

    - FSFile: autodetect the encoding of UTF-8 text files with a
      suitable Byte Order Mark (0xEF 0xBB 0xBF).

    - CMFDefault.MetadataTool:  support arbitrary additional schemas.
      The "stock" DublinCore-specific API is still accessible, implemented
      via a special "DCMI" subobject.

    - WorkflowTool and DCWorkflow: Improved add form for workflow objects.
      Presettings can now be loaded from workflow settings in setup profiles.
      This replaces the feature that did allow to load presettings from the
      oldstyle workflow factories registry.

    - WorkflowTool: Switched to generic plug-in mechanism for workflows.
      Any class registered for IWorkflowDefinition can now be used in the
      WorkflowTool.

    - DCWorkflow: Added 'revision2' profile.
      This replaces the hardcoded 'Revision 2' default workflow.

    - CMFActionIcons, CMFCalendar, CMFDefault, CMFTopic, CMFUid:
      use the new 'for_' argument in GenericSetup's profile registry API
      to indicate that profiles are intended for CMFCore's ISiteRoot sites.

    - CMFTopic:  added specialized GenericSetup support for topics, to
      allow capturing criteria in a single XML file.

    - CMFDefault and CMFTopic: Split off CMFTopic profile.
      CMFTopic support is now configured by an optional extension profile.
      CMFDefault no longer depends on CMFTopic.

    - TypesTool: Improved add form for type info objects.
      Presettings can now be loaded from type info settings in setup profiles.