@@ -7,6 +7,6 @@
  <property name="email_from_name"
     type="string">Portal Administrator</property>
  <property name="validate_email" type="boolean">False</property>
- <property name="default_charset" type="string"></property>
+ <property name="default_charset" type="string">utf-8</property>
  <property name="enable_permalink" type="boolean">False</property>
 </site>
